--- a/page2.htm
+++ b/page2.htm
@@ -21,7 +21,7 @@
                 <div style="display: flex; justify-content: center; align-items: center; flex-wrap: wrap;">
                     <div class="title_p">
                     <h1 style="font-size: 20px; margin-bottom: 10px;">Le Problème</h1>
-                    <p style="text-align: left; font-size: 13px;">Le Bénin est un pays en développement avec un taux d'accidents de la route élevé. En 2022, il y a eu plus de 10 000 accidents de la route au Bénin, avec plus de 3 000 morts et 5 000 blessés. La majorité des accidents de la route sont causés par des infractions routières, telles que les excès de vitesse, les franchissements de feux rouges et les arrêts non autorisés.</p>
+                    <p style="text-align: left; font-size: 13px;">Le Bénin est un pays en voie de développement avec un taux de mortalité par accidents de la route estimé à 27 morts pour 100 000 habitants en 2019 (banque mondiale).</p>
                 </div>
                 <div style="margin: 20px; ">
                     <img style="border-radius: 10px;" src="assets/brillants.jpg" width="300px">
